@@ -9,6 +9,6 @@ export { default as LoadingSpinner } from './components/LoadingSpinner/LoadingSp
 export { default as Portal } from './components/Portal/Portal';
 export { default as PublicationStatus } from './components/PublicationStatus/PublicationStatus';
 export { default as Transition } from './components/Transition/Transition';
-export { default as initSkipLink } from './includes/initSkipLink';
 export { initDismissibles } from './includes/initDismissibles';
+export { initSkipLink } from './includes/initSkipLink';
 export { initUpgradeNotification } from './includes/initUpgradeNotification';
